--- a/metadata.yaml
+++ b/metadata.yaml
@@ -46,5 +46,6 @@ subjects:
 - !lcsh 'Detective and mystery stories'
 - !lcsh 'Christmas -- Juvenile fiction'
 - !lcsh 'Friendship -- Juvenile fiction'
+- GITenberg
 title: At the Black Rocks
 url: http://www.gutenberg.org/ebooks/40269
